backend/base/redis/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: blog
  labels:
    vault-access: redis
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
        vault-access: redis
      annotations:
        vault.hashicorp.com/agent-inject: "true"
        vault.hashicorp.com/auth-path: "auth/blog-post-kubernetes"
        vault.hashicorp.com/agent-inject-token-audience: "vault"
    spec:
      serviceAccountName: blog-redis
      containers:
        - name: redis
          image: redis:7-alpine
          imagePullPolicy: IfNotPresent
          
          command: ["/bin/sh", "-c"]
          args: 
           - |
             set -a
             . /vault/secrets/redis.env
             set +a
             exec redis-server --requirepass "$REDIS_PASSWORD"

          ports:
            - containerPort: 6379

          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"

            limits:
              memory: "512Mi"
              cpu: "250m"
