backend/base/redis/network-policies.yaml
##################### Kubernetes Network Policy for Redis ####################
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-ingress
  namespace: blog-dev
spec:
  podSelector:
    matchLabels:
      app: redis

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: backend
        - podSelector:
            matchLabels:
              app: celery
              component: worker
        - podSelector:
            matchLabels:
              app: celery
              component: beat

      ports:
        - protocol: TCP
          port: 6379
---

#################### Istio Authorization Policy for Redis ####################
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: redis-only-backend
  namespace: blog-dev
spec:
  selector:
    matchLabels:
      app: redis

  action: ALLOW

  rules:
    - from:
        - source:
            serviceAccounts:
              - blog-redis
              - blog-backend
      to:
        - operation:
            ports:
              - "6379"
